Increased width of search-label-short style from 70 to 72 pixels, to solve a layout issues with mobile Safari.

--- a/src/HallOfBeorn/Content/Site.css
+++ b/src/HallOfBeorn/Content/Site.css
@@ -676,7 +676,7 @@ tr.pager td {
 .search-label-short {
     display: inline-block;
     margin-right:2px;
-    width:70px;
+    width:72px;
     color: #3e5667;
     font-size: 12px;
 }
